prometheus-stack/templates/alert-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  clusterIP: None
  ports:
    - name: web
      port: 9093
      targetPort: 9093
  selector:
    app: alertmanager
