prometheus-stack/templates/alert-manager/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager
  labels:
    app: alertmanager
spec:
  podSelector:
    matchLabels:
      app: alertmanager
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 9093
